# AGRI-BRAIN

./: .commit_msg.tmp  .env.example  .env.prod.example  .gitattributes  .gitignore  CITATION.cff  HOW_TO_RUN.md  How to run.docx  LICENSE  README.md  hpc_aggregate.sh  hpc_import.sh  hpc_run.sh  hpc_seed.sh  ruff.toml
agri-brain-mvp-1.0.0/backend/: pyproject.toml
agri-brain-mvp-1.0.0/backend/experiments/: run_experiments.py
agri-brain-mvp-1.0.0/backend/pirag/: agent_pipeline.py  context_builder.py  context_eval.py  context_learner.py  context_provider.py  context_to_logits.py  dynamic_knowledge.py  explain_decision.py  keyword_extractor.py  message_enrichment.py  physics_reranker.py  temporal_context.py  trace_exporter.py
agri-brain-mvp-1.0.0/backend/pirag/chain/: ProvenanceRegistry.sol  README.md  client.py
agri-brain-mvp-1.0.0/backend/pirag/configs/: policy.yaml
agri-brain-mvp-1.0.0/backend/pirag/eval/: metrics.py
agri-brain-mvp-1.0.0/backend/pirag/guards/: feasibility_guard.py  retrieval_guard.py  unit_guard.py
agri-brain-mvp-1.0.0/backend/pirag/inference/: __init__.py  llm_engine.py  template_engine.py
agri-brain-mvp-1.0.0/backend/pirag/ingestion/: __init__.py  embedder.py  vector_store.py
agri-brain-mvp-1.0.0/backend/pirag/knowledge_base/: README.md  composting_bioenergy_requirements.txt  cooperative_governance_policy.txt  cyber_outage_contingency.txt  demand_volatility_response.txt  emergency_rerouting_sop.txt  green_ai_reporting.txt  heatwave_contingency_plan.txt  redistribution_food_bank_protocol.txt  regulatory_fda_leafy_greens.txt  slca_community_resilience_metrics.txt  slca_guidelines.txt
agri-brain-mvp-1.0.0/backend/pirag/mcp/: __main__.py  agent_capabilities.py  context_sharing.py  prompts.py  protocol.py  protocol_recorder.py  registry.py  reliability.py  resources.py  server.py  tool_dispatch.py  transport.py
agri-brain-mvp-1.0.0/backend/pirag/provenance/: hasher.py  merkle.py
agri-brain-mvp-1.0.0/backend/scripts/: calibrate_governance.py  sweep_price_sensitivity.py
agri-brain-mvp-1.0.0/backend/src/: app.py  data_spinach.csv  security.py  settings.py  state.py
agri-brain-mvp-1.0.0/backend/src/agents/: base.py  (+5 more)
agri-brain-mvp-1.0.0/backend/tests/: test_governance_thresholds.py  test_mode_scenario_coverage.py  test_path_b_integration.py  test_security_tokens.py
agribrain/backend/: pyproject.toml  requirements-lock.txt
agribrain/backend/experiments/: run_experiments.py
agribrain/backend/pirag/: context_builder.py  context_eval.py  context_learner.py  context_provider.py  context_to_logits.py  dynamic_knowledge.py  explain_decision.py  keyword_extractor.py  temporal_context.py  trace_exporter.py
agribrain/backend/scripts/: calibrate_governance.py  sweep_price_sensitivity.py
agribrain/backend/src/: add_csv_columns.py  app.py  app_state.py  data_spinach.csv  security.py  settings.py
agribrain/backend/tests/: test_aggregate_seeds_envelope.py  test_batch_inventory.py  test_capacity_constrained_rle.py  test_chain_contracts.py  test_claims_mapping_integrity.py  test_context_influence_rate.py  test_cyber_reroute_calibration.py  test_dataset_schema.py  test_doc_stoch_defaults.py  test_effective_rho_and_knee.py  test_governance_parsing.py  test_governance_thresholds.py  test_install_imports.py  test_learner_persistence.py  test_mcp_tool_inventory.py  test_metadata_consistency.py  test_metric_variants.py  test_mode_scenario_coverage.py  test_no_bonus_ablation.py  test_per_seed_traces.py  test_policy_learner_shape.py  test_post_audit_fixes.py  test_realistic_rle.py  test_route_conditioned_reward.py  test_settings_hardening.py  test_theta_deploy_parity.py  test_violation_disposition.py  test_yield_demand_state_context.py
(+2359 files in other folders)
