[project]
name='agri-brain-backend'
version='1.1.0'
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nahid Sarker"},
    {name = "Monzure-Khoda Kazi"},
]
dependencies=[
    'fastapi>=0.135,<1',
    'uvicorn>=0.42,<1',
    'pydantic>=2.10,<3',
    'numpy>=2.1,<3',
    'pandas>=2.2,<3',
    'matplotlib>=3.10,<4',
    'reportlab>=4.4,<5',
    'orjson>=3.11,<4',
    'requests>=2.32,<3',
    'web3>=7.14,<8',
    'python-multipart>=0.0.22,<1',
    'pyyaml>=6.0,<7',
]
[build-system]
requires=['setuptools','wheel']
build-backend='setuptools.build_meta'

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]
