[project]
name = 'agri-brain-backend'
version = '1.2.0'
# Tightened from >=3.10 to >=3.11,<3.13 in 2026-05: the canonical
# requirements-lock.txt was generated under 3.11.15 and CI only
# proves 3.11. A Python 3.10 user would resolve a different pin set
# than the lockfile and silently end up off-canon. The upper bound
# excludes 3.13+ until those interpreters are added to the CI matrix
# and the lockfile is re-verified against them.
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Nahid Sarker"},
    {name = "Monzure-Khoda Kazi"},
]
dependencies = [
    'fastapi>=0.135,<1',
    'uvicorn>=0.42,<1',
    'pydantic>=2.10,<3',
    'numpy>=2.1,<3',
    'pandas>=2.2,<3',
    'matplotlib>=3.10,<4',
    'reportlab>=4.4,<5',
    'orjson>=3.11,<4',
    'requests>=2.32,<3',
    'web3>=7.14,<8',
    'python-multipart>=0.0.22,<1',
    'pyyaml>=6.0,<7',
    # scipy is required by aggregate_seeds.py for the Wilcoxon and
    # Mann-Whitney significance tests. Both code paths have permutation
    # fallbacks, but without scipy the headline AB-vs-Static and
    # AB-vs-Hybrid-RL p-values used to silently return 1.0 from the
    # except clause; pinning scipy here ensures the HPC venv install
    # picks up the canonical implementation with the fallback acting
    # as a defensive backstop rather than the primary code path.
    'scipy>=1.11,<2',
]

[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

# Explicit package discovery. Without this, setuptools' src-layout
# heuristic put only ``agribrain/backend/src`` on the editable install
# path, making ``import pirag`` work only as a side-effect of cwd or
# uvicorn's --app-dir flag. The 2026-05 packaging fix tells setuptools
# that the project root for discovery is ``agribrain/backend/`` itself
# (where this file lives) and exposes both top-level packages so
# editable installs reach them from any cwd.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pirag*"]
exclude = ["tests*", "experiments*", "scripts*", "static*", "runtime*", "*.egg-info*"]

[project.optional-dependencies]
# Test/dev extras. ``httpx`` is required by Starlette's TestClient that
# the integration tests under ``agribrain/backend/tests`` use.
# ``pytest-asyncio`` is for the few async-flow tests under pirag.
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]
# Slow tests (full mode x scenario matrix over the simulator) are skipped
# by default and can be re-enabled with `pytest -m slow` or
# `pytest --override-ini="addopts="`.
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end simulator runs; minutes per test. Opt-in via -m slow.",
]
